Fix white space on scroll bouncing

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -24,6 +24,10 @@
   color: white;
 }
 
+header {
+  padding-top: 2rem;
+}
+
 .App-link {
   color: #61dafb;
 }
