--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
   src: local("SEGA LOGO FONT"), url("./assets/SEGA.woff") format("woff");
 }
 
+html {
+  background: rgba(7, 27, 82, 1);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -25,6 +29,7 @@ code {
 }
 
 h1 {
+  margin-top: 0;
   font-family: "SEGA LOGO FONT";
   font-weight: 200;
   color: #0ccac4;
